# MAGELLAN

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/bio_benchmarks/data/BRCA/BRCA_w_kinase/json/: kegg_shortest_path_with_phenotype.json
benchmarks/bio_benchmarks/data/BRCA/BRCA_w_kinase/shortest_path/: kinase_node_table.csv
benchmarks/bio_benchmarks/data/BRCA/BRCA_w_kinase/spec/: brca_w_kinase_shortest_path_drug_specification.csv
benchmarks/bio_benchmarks/data/BRCA/utils/: drug_specification.csv  drug_summary.csv  gen_gdsc_viability_specification.R  gen_kegg_conditioned_netw.R  liturature_curated_specification.R  model_basal_behaviours.csv  model_init.csv  phosphoproteomic_specification.R
benchmarks/bio_benchmarks/data/BRCA/utils/hijazi_hernandez/: cell_line_info.csv  hernandez_meta_data.xlsx
benchmarks/bio_benchmarks/data/BRCA/v1/: metadata.toml
benchmarks/bio_benchmarks/data/BRCA/v1/json/: kegg_shortest_path_with_phenotype.json  kegg_with_phenotype.json
benchmarks/bio_benchmarks/data/BRCA/v1/spec/: basal_specification.csv  combined_specification.csv  drug_specification.csv  literature_curated_specification.csv  literature_curated_specification_minimal.csv  model_init.csv
benchmarks/bio_benchmarks/data/BRCA/v2/json/: shortest_path_e2e.json
benchmarks/bio_benchmarks/data/covid/: COVID_model.json  spec.csv  validation_spec.csv
benchmarks/bio_benchmarks/data/example/example_1/json/: example_network_bio_untrained.json
benchmarks/bio_benchmarks/data/melanoma/LC_ModelFiles/: LC_EdgeList.csv  LC_Hypotheses.csv  LC_Spec.csv  LC_TFList.csv
benchmarks/bio_benchmarks/data/melanoma/Melanoma-LC_ModelFiles/: .~lock.Melanoma-LC_DrugList.csv#  Melanoma-LC_Backgrounds.csv  Melanoma-LC_Backgrounds_lowGF.csv  Melanoma-LC_DrugList.csv  Melanoma-LC_EdgeList.csv  Melanoma-LC_Nodes.csv  Melanoma-LC_TFList.csv
benchmarks/bio_benchmarks/data/melanoma/MelanomaMeta_ModelFiles/: AntigenPresentationEdgelist.csv  ICT_spec.csv  melanoma7.21-DC.json
benchmarks/bio_benchmarks/data/melanoma/Melanoma_ModelFiles/: Melanoma_CellLines.csv  Melanoma_EdgeList.csv  Melanoma_Spec.csv  Melanoma_TFList.csv
benchmarks/bio_benchmarks/data/srivatsan/: .gitignore  README.md  cas_to_chembl.json  chembl_to_targets.json  mcf7_brca_filtered_processed.csv
benchmarks/bio_benchmarks/data/srivatsan/spec/: srivatsan_spec_master.csv
benchmarks/bio_benchmarks/data/srivatsan/utils/: 1_clean_srivatsan_table_5.py  2_filter_srivatsan_mcf7_brca.py  3_annotate_chembl_ids.py  4_convert_to_spec_format.py  extract_experiment_info.py  pipeline_config.toml  run_pipeline.py  srivatsan_funcs.py
benchmarks/synthetic_benchmarks/configs/: example_sweep.toml
benchmarks/synthetic_benchmarks/configs/general_sweeps/: initial_weight_sweep.toml  n_iter_sweep.toml  network_size_sweep.toml  specification_noise_sweep.toml  specification_size_sweep.toml  spurious_edge_sweep.toml  test_loop_integration.toml  weight_init_method_sweep.toml
benchmarks/synthetic_benchmarks/configs/loop_sweeps/: n_iter_sweep_with_loops_chain.toml  n_iter_sweep_with_loops_ring_4.toml  n_iter_sweep_with_loops_ring_6.toml  n_iter_sweep_with_loops_ring_nested.toml
benchmarks/synthetic_benchmarks/loop_networks/: chain_3_5_4_conn1.json  chain_3x3_conn1.json  chain_3x4_conn2.json  chain_5_6_5_4_conn1.json  loop_analysis.json  nested_3_4_overlap1.json  nested_3_5_4_overlap1.json  nested_4_5_overlap2.json  nested_5_6_7_overlap2.json  ring_10.json  ring_3.json  ring_4.json  ring_5.json  ring_6.json  ring_8.json
magellan/: benchmarking_utils.py  data_algorithm.py  gnn_model.py  graph.py  graph_algorithm.py  json_io.py  network_growth.py  onpath.py  path.py  path_algorithm.py  pheno_strategies.py  plot.py  prune.py  prune_opt.py  pydot_io.py  sci_opt.py  simulation.py  synthetic.py  z3_opt.py
magellan/utils/: file_io.py  set_path.py  shortest_path.py
scripts/: benchmarking_sweeps.py  gen_loop_optimized_network.py  gen_shortest_path_net.py  prune_config.toml  run_BMA_simulation.py  train_bio.py  train_synthetic.py
scripts/example_configs/: LC_melanoma_config.toml  Melanoma_config.toml  README.md  brca_e2e_train_bio_config_srivatsan_only.toml  brca_train_bio_config.toml  brca_train_bio_config_lit_srivatsan.toml  brca_train_bio_config_srivatsan_only.toml  covid_config.toml  example_benchmark_config.toml  example_shortest_path_config.toml  example_train_bio_config.toml  example_train_bio_config_2.toml  shortest_path_config_e2e.toml
scripts/example_data/shortest_path/: gene_node_table.csv  shortest_path_node_list.csv
scripts/example_data/simulation/: test_spec.csv
scripts/kegg_network_integration/: add_shortest_path.R
tests/: report.md  test_Net.py  test_add_dummy_nodes_and_generate_A_inh.py  test_add_perturbed_nodes.py  test_add_spurious_edges.py  test_analyse_binary_predictions.py  test_avg_mask.py  test_base_adj.py  test_calc_err.py  test_calculate_error_by_gene.py  test_calculate_errors_by_type.py  test_calculate_node_class_weights.py  test_check_dummy_nodes.py  test_check_pert_dic_values.py  test_create_annotation_matrix.py  test_create_edge_scale.py  test_create_mask_dic.py  test_create_pert_mask.py  test_create_pyg_data_object.py  test_filter_spec_invalid_experiments.py  test_filter_specification.py  test_gen_json.py  test_generate_base_graph.py  test_get_adj.py  test_get_adjacency_matrix_mult.py  test_get_data.py  test_get_diff.py  test_get_edge_weight_matrix.py  test_get_loss.py  test_get_node_weight_class_tensor.py  test_get_pert_list.py  test_get_real_indices.py  test_get_trained_network.py  test_make_edge_idx.py  test_make_node_dic_make_pert_dic.py  test_plot_comparison_heatmaps.py  test_plot_pgv.py  test_pred_all_bound_single.py  test_pred_mat_bound_single.py  test_predict_nn.py  (+8 more)
tests/helper_generate_shortest_path_net/: helper_gene_node_table_1.csv  helper_out_shortest_path.csv  helper_out_shortest_path.xlsx  ref_out_shortest_path.csv
tests/helper_simulation/: helper_simulation_netw_in_1.json  helper_simulation_out_1.csv  helper_simulation_spec_in_1.csv
(+6 files in other folders)
